Fixing side bar overlapping issue

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -100,7 +100,7 @@
 
 @media screen and (min-width: 768px) {
   .sidebar-list {
-    max-height: 80vh;
+    max-height: 55vh;
     padding-right: 20px;
   }
 }
